--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="img/capa.jpg" class="d-block w-100" alt="...">
+                        <img src="img/capa.jpg" class="d-block w-100" alt="Capa do Psychonauts">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/capa2.jpg" class="d-block w-100" alt="...">
+                        <img src="img/capa2.jpg" class="d-block w-100" alt="Capa de Alice">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/capa3.jpg" class="d-block w-100" alt="...">
+                        <img src="img/capa3.jpg" class="d-block w-100" alt="Capa do We Happy Few">
                       </div>
                     </div>
                   </div>
@@ -96,53 +96,53 @@
                     <div class="melhoresofertas">
                         <ul>
                             <li>
-                                <a href="#"><img src="img/promo1.jpg"alt="">
+                                <a href="#"><img src="img/promo1.jpg"alt="Item em Promoção 1">
                                 <p>50% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo4.jpg" alt="">
+                                <a href="#"><img src="img/promo4.jpg" alt="Item em Promoção 2">
                                 <p>40% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo3.jpg" alt="">
+                                <a href="#"><img src="img/promo3.jpg" alt="Item em Promoção 3">
                                 <p>75% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo6.jpg" alt="">
+                                <a href="#"><img src="img/promo6.jpg" alt="Item em Promoção 4">
                                 <p>35% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo5.jpg" alt="">
+                                <a href="#"><img src="img/promo5.jpg" alt="Item em Promoção 5">
                                 <p>25% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo3.jpg" alt="">
+                                <a href="#"><img src="img/promo3.jpg" alt="Item em Promoção 6">
                                 <p>60% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo3.jpg" alt="">
-                                <p>60% OFF</p>
+                                <a href="#"><img src="img/promo7.png" alt="Item em Promoção 7">
+                                <p>55% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo3.jpg" alt="">
-                                <p>60% OFF</p>
+                                <a href="#"><img src="img/promo9.png" alt="Item em Promoção 8">
+                                <p>80% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo3.jpg" alt="">
-                                <p>60% OFF</p>
+                                <a href="#"><img src="img/promo8.png" alt="Item em Promoção 9">
+                                <p>30% OFF</p>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><img src="img/promo3.jpg" alt="">
-                                <p>60% OFF</p>
+                                <a href="#"><img src="img/promo10.png" alt="Item em Promoção 10">
+                                <p>25% OFF</p>
                                 </a>
                             </li>
                         </ul>
